openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poc-hello-service
  name: poc-hello-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: poc-hello-ms
    deploymentconfig: poc-hello-ms
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
